package com.ichwan.schoolreport.model

data class Student(val name: String, val nisn: String, val className: String, val gender: String)
