package com.ichwan.schoolreport.model

data class Teacher(val name: String, val nip: String, val room: String, val gender: String)
